--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.16",
+        "@heroicons/vue": "^2.0.18",
         "@vueuse/core": "^10.4.1"
     }
 }
