--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.16",
         "@heroicons/vue": "^2.0.18",
-        "@vueuse/core": "^10.4.1"
+        "@vueuse/core": "^10.4.1",
+        "dayjs": "^1.11.9",
+        "vue3-toastify": "^0.1.12"
     }
 }
